# -Fidoxia-est-une-alternative-moderne-a-iLovePDF-avec-OCR-et-IA.-

./: .gitignore  README.md  pyproject.toml  start.sh  test_openai_client.py  vercel.json
.github/workflows/: seriesforge-deploy-guardrails.yml
fidoxia/: __init__.py  openai_client.py
seriesforge/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
seriesforge/app/: globals.css  layout.tsx
seriesforge/app/(dashboard)/: layout.tsx
seriesforge/app/producer-mode/: page.tsx
seriesforge/app/storyboard-preview/: page.tsx
seriesforge/components/chatbot/: ProducerModePanel.tsx
seriesforge/components/providers/: ApiKeyFetchBridge.tsx
seriesforge/components/ui/: CostBadge.tsx  GeneratorPicker.tsx  Navbar.tsx
seriesforge/lib/: auth.ts  costs.ts  generators.ts  visualStyles.ts
seriesforge/lib/agents/: audioAgent.ts  autoFixAgent.ts  characterConsistencyAgent.ts  directorAgent.ts  promptOptimizerAgent.ts  qualityControlAgent.ts  scenarioAnalystAgent.ts  scriptAgent.ts  storyboardAgent.ts  videoPromptAgent.ts  visualDNAAgent.ts
seriesforge/lib/audio/: voiceDirection.ts
seriesforge/lib/chatbot/: producerChat.ts  producerMode.ts
seriesforge/lib/consistency/: characterConsistency.ts  constants.ts  lipsync.ts  preflight.ts  promptBuilder.ts  sceneHydration.ts  types.ts
seriesforge/prisma/: schema.prisma
seriesforge/scripts/: build-ci.mjs
tests/: test_openai_client.py
video-saas/: README.md  dev.db  package-lock.json  package.json
video-saas/prisma/: schema.prisma
video-saas/src/: middleware.ts
(+145 files in other folders)
