[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fidoxia"
version = "0.1.0"
description = "Fidoxia – alternative moderne à iLovePDF avec OCR et IA"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
